--- a/app/src/main/res/layout/fragment_fare.xml
+++ b/app/src/main/res/layout/fragment_fare.xml
@@ -1,16 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:layout_below="@id/toolbar"
+    android:layout_marginTop="?attr/actionBarSize"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-        <TextView
-            android:id="@+id/fares_title"
+        android:layout_height="fill_parent"
+        android:layout_marginTop="?attr/actionBarSize">
+
+        <RelativeLayout
+            android:id="@+id/info_panel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true">
+
+            <RelativeLayout
+                android:id="@+id/left_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/leap_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Leap" />
+
+                <Switch
+                    android:layout_marginBottom="8dp"
+                    android:id="@+id/leap_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/leap_text"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center" />
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/leap_switch"
+                    android:id="@+id/cost_panel_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:text="Cost:" />
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@+id/cost_panel_title"
+                    android:id="@+id/zones_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="16dp"
+                    android:text="Zones:" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/right_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_toEndOf="@+id/left_panel"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/cash_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Cash" />
+
+                <Switch
+                    android:layout_marginBottom="8dp"
+                    android:id="@+id/cash_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cash_text"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center" />
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/figure_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/cash_switch"
+                    android:text="€xx.xx" />
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/zones_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/figure_text"
+                    android:text="x" />
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/fare_stations"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Fare"/>
+            android:layout_below="@+id/info_panel">
+
+            <GridView
+                android:id="@+id/gridview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnWidth="90dp"
+                android:gravity="center"
+                android:horizontalSpacing="10dp"
+                android:numColumns="auto_fit"
+                android:padding="10sp"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp" />
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
