--- a/app/src/main/res/layout/slide_two.xml
+++ b/app/src/main/res/layout/slide_two.xml
@@ -52,7 +52,7 @@
         android:textColor="#ffffff"
         android:paddingRight="32dp"
         android:textSize="28sp"
-        android:text="What's Your Fare Type?"/>
+        android:text="@string/slide_two_fare_type"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
