--- a/app/src/main/res/layout/fragment_expenditures.xml
+++ b/app/src/main/res/layout/fragment_expenditures.xml
@@ -17,7 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_margin="8dp">
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp">
 
             <TextView
                 android:id="@+id/cash_title"
@@ -34,7 +36,9 @@
                 android:paddingBottom="8dp"
                 android:paddingTop="16dp"
                 android:gravity="center_horizontal"
-                android:layout_margin="8dp">
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp">
 
                 <TextView
                     android:id="@+id/daily_expenditures_title_cash"
@@ -102,7 +106,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_margin="8dp">
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp">
 
             <TextView
                 android:id="@+id/leap_title"
