--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/slide_one"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport = "true"
-    android:id="@+id/scrollView">
-    <RelativeLayout
-        android:layout_width="match_parent"
+    android:background="#034748"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient"
-        android:id="@+id/bg">
+        android:layout_gravity="center"
+        android:src="@drawable/ic_launcher"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-        <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="200dp"
-            android:maxHeight="200dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/glassbyte"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+    <TextView
+        android:layout_margin="16dp"
+        android:id="@+id/slide_one_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-thin"
+        android:gravity="center"
+        android:text="iompar"
+        android:textColor="#ffffff"
+        android:textSize="28sp"
+        android:layout_above="@+id/logo"
+        android:layout_centerHorizontal="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold"
-            android:textSize="40sp"
-            android:text="GlassByte Limited"
-            android:layout_marginTop="30dp"
-            android:id="@+id/logotext"
-            android:textColor="#000000"
-            android:layout_below="@+id/image_view"
-            android:layout_centerHorizontal="true" />
-    </RelativeLayout>
-</ScrollView>
+</RelativeLayout>
