--- a/app/src/main/res/layout/slide_three.xml
+++ b/app/src/main/res/layout/slide_three.xml
@@ -38,128 +38,79 @@
 
 
         <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_marginEnd="16dp"
             android:id="@+id/payment_options_cash"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_height="wrap_content">
 
             <TextView
+                android:layout_marginTop="6dp"
                 android:id="@+id/cash_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:gravity="center"
-                android:paddingEnd="64dp"
                 android:text="@string/slide_three_pay_cash" />
 
-            <Switch
-                android:id="@+id/switch_pref_cash"
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/cash_text"
+                android:id="@+id/leap_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignRight="@+id/cash_text" />
-
+                android:gravity="center"
+                android:text="@string/slide_three_pay_leap" />
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_toEndOf="@+id/payment_options_cash"
             android:id="@+id/payment_options_leap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/leap_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="false"
-                android:layout_centerInParent="true"
-                android:gravity="center"
-                android:paddingEnd="64dp"
-                android:text="@string/slide_three_pay_leap" />
-
             <Switch
                 android:id="@+id/switch_pref_leap"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/leap_text" />
+                android:layout_height="wrap_content" />
 
+            <Switch
+                android:layout_below="@+id/switch_pref_leap"
+                android:id="@+id/switch_pref_cash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </RelativeLayout>
-
-        <TextView
-            android:fontFamily="sans-serif-thin"
-            android:id="@+id/leap_info_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp"
-            android:text="@string/slide_three_title_two"
-            android:textSize="28sp" />
-
-        <RelativeLayout
-            android:id="@+id/leap_login_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:paddingEnd="64dp"
-            android:paddingStart="64dp">
-
-            <EditText
-                android:id="@+id/leap_username"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:hint="@string/username"
-                android:inputType="textPersonName"
-                android:maxLines="1" />
-
-            <EditText
-                android:id="@+id/leap_number"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/leap_username"
-                android:gravity="center"
-                android:hint="@string/leap_card_number"
-                android:paddingTop="12dp"
-                android:inputType="number"
-                android:maxLines="1" />
-
-            <EditText
-                android:id="@+id/leap_email"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/leap_number"
-                android:gravity="center"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingTop="12dp" />
-
-            <EditText
-                android:id="@+id/leap_password"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/leap_email"
-                android:gravity="center"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingTop="12dp" />
-
         </RelativeLayout>
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="32dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_directions_transit_white_48dp" />
+    </LinearLayout>
+
     <TextView
+        android:id="@+id/payment_desc"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_weight="3"
+        android:layout_weight="5"
         android:gravity="center"
         android:paddingLeft="64dp"
         android:paddingRight="64dp"
-        android:text="@string/slide_three_desc"
+        android:text="@string/slide_three_desc_cash"
         android:textColor="#ffffff"
         android:textSize="16sp" />
 
