fixed lack of updates on user interaction when active leap is changed, fixed by calling an override under Main

--- a/app/src/main/res/layout/fragment_expenditures.xml
+++ b/app/src/main/res/layout/fragment_expenditures.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/daily_expenditures_title_cash"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total expenditures today:" />
+                    android:text="@string/expenditures_today" />
 
                 <TextView
                     android:id="@+id/weekly_expenditures_title_cash"
@@ -130,7 +130,7 @@
                     android:id="@+id/daily_expenditures_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total expenditures today:" />
+                    android:text="@string/expenditures_today" />
 
                 <TextView
                     android:id="@+id/weekly_expenditures_title"
