--- a/app/src/main/res/layout/fragment_fare.xml
+++ b/app/src/main/res/layout/fragment_fare.xml
@@ -3,13 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_below="@id/toolbar"
-    android:layout_marginTop="?attr/actionBarSize"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_height="fill_parent">
 
         <RelativeLayout
             android:id="@+id/info_panel"
