--- a/app/src/main/res/layout/fragment_realtime.xml
+++ b/app/src/main/res/layout/fragment_realtime.xml
@@ -5,8 +5,7 @@
     android:id="@+id/main_content"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_below="@id/toolbar"
-    android:layout_marginTop="?attr/actionBarSize">
+    android:layout_below="@id/toolbar">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
