--- a/app/src/main/res/layout/fragment_expenditures.xml
+++ b/app/src/main/res/layout/fragment_expenditures.xml
@@ -2,15 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_below="@id/toolbar"
-    android:layout_marginTop="?attr/actionBarSize">
+    android:layout_below="@id/toolbar">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="0dp"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:layout_marginBottom="0dp">
 
         <RelativeLayout
             android:id="@+id/cash_overview_panel"
@@ -27,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="false"
                 android:layout_centerHorizontal="true"
-                android:text="Overall Expenditure" />
+                android:text="@string/overall_exp" />
 
             <RelativeLayout
                 android:id="@+id/expenditures_panel_cash"
@@ -115,7 +113,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="false"
                 android:layout_centerHorizontal="true"
-                android:text="Active Leap Card" />
+                android:text="@string/active_leap_card" />
 
             <RelativeLayout
                 android:id="@+id/expenditures_panel"
