--- a/app/src/main/res/layout/fragment_fare.xml
+++ b/app/src/main/res/layout/fragment_fare.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_below="@id/toolbar"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -118,5 +120,15 @@
                 android:stretchMode="columnWidth"
                 android:verticalSpacing="10dp" />
         </RelativeLayout>
+
     </RelativeLayout>
-</RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_margin="@dimen/fab_margin"
+        android:id="@+id/add_expenditure_fab_fares"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add_white_48dp"
+        android:layout_gravity="bottom|end"
+        app:fabSize="normal"
+        app:rippleColor="@color/fabRipple"/>
+</android.support.design.widget.CoordinatorLayout>
